# noxis

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Examples/: CMakeLists.txt  display_logo.cpp  example.cpp  log_example.cpp  scene_tree_example.cpp  simple_example.cpp
Noxis/: CMakeLists.txt  Engine.cpp  Engine.hpp  FPSLimiter.cpp  FPSLimiter.hpp  LogHandler.cpp  LogHandler.hpp  Logger.cpp  Logger.hpp  Node.cpp  Node.hpp  Noxis.hpp  Point2D.hpp  Renderer.cpp  Renderer.hpp  Resource.cpp  Resource.hpp  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  Size.hpp  Size2D.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp  Transform.cpp  Transform.hpp  Vector2D.hpp  filesystem.cpp  filesystem.hpp  ns.hpp  utils.cpp  utils.hpp
